--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>GithubWork</title>
+    <title>Collect</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -10,6 +10,32 @@
   </head>
 
   <body>
+    <div id="slidemenu">
+      <ul class="nav navbar-nav navbar-right" data-hover="dropdown" data-animations="zoomIn fadeIn fadeInUp fadeIn">
+        <% if user_signed_in? %>
+        <li class="">
+        <%= link_to "my page",  %>
+        </li>
+        <li class="">
+        <%= link_to 'cart',  %>
+        </li>
+        <li class="">
+        <!-- ↓以下のコードは、5章で正しいroutingに書き直します。 -->
+        <%= link_to 'log out', destroy_user_session_path, method: :delete %>
+          
+        </li>
+    <% else %>
+      <li class="">
+        <%= link_to "sign in", new_user_registration_path %>
+      </li>
+      <li class="">
+        <%= link_to "login", new_user_session_path %>
+      </li>
+    <% end %>
+  </ul>
+</div>
+
     <%= yield %>
+
   </body>
 </html>
