--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,10 +1,3 @@
-<main>
-	<div class="productBox">
-		<% @products.each do |product| %>
-		<div class="view view-first">
-			<%= link_to post_image_path(post_image.id) do %>
-            <%= attachment_image_tag post_image, :image %>
-                    <% end %>
-                  </div>
-	</div>
-</main>
+<div>
+	<h2>aaaaa</h2>
+</div>
