--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -1,3 +1,9 @@
 <h1>Admin::Products#index</h1>
 <p>Find me in app/views/admin/products/index.html.erb</p>
  sasisuseso
+
+<% if admin_signed_in? %>
+ 	<p><%= @test %></p>
+ 	<p>now log in</p>
+ 	<%= link_to "ログアウト", destroy_admin_session_path, method: :delete %>
+<% end %>
