--- a/app/views/purchases/index.html.erb
+++ b/app/views/purchases/index.html.erb
@@ -1,2 +1,7 @@
 <h1>Purchases#index</h1>
 <p>Find me in app/views/purchases/index.html.erb</p>
+
+<% if user_signed_in? %>
+	<p>now log in</p>
+	<%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
+<% end %>
