--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -1,6 +1,4 @@
-<h1>商品一覧</h1>
-<p>Find me in app/views/admin/products/index.html.erb</p>
- sasisuseso
+<h1>管理者商品一覧</h1>
 
 
 
@@ -10,6 +8,7 @@
 
 <% if admin_signed_in? %>
  	<p><%= @test %></p>
- 	<p>now log in</p>
+ 	<%= link_to "サインアップ", new_admin_session_path %>
+ 	<%= link_to "ログイン", admin_session_path %>
  	<%= link_to "ログアウト", destroy_admin_session_path, method: :delete %>
 <% end %>
