--- a/app/views/admin/products/new.html.erb
+++ b/app/views/admin/products/new.html.erb
@@ -1,6 +1,6 @@
 <h1>新規商品登録</h1>
 <!-- form_for部分 -->
-<%= form_for(@product) do |f| %>
+<%= form_for(@product, url: admin_products_path, method: :post) do |f| %>
 
     <h4>商品名</h4>
     <%= f.text_field :product_name %>
