--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,24 @@
  *= require_tree .
  *= require_self
  */
+
+* {
+   margin: 0;
+   padding: 0;
+   box-sizing: border-box;
+ }
+
+a {
+   text-decoration: none;
+ }
+
+ 
+ li {
+   list-style: none;
+ }
+
+ .clearfix::after {
+   content: "";
+   display: block;
+   clear: both;
+ }
