--- a/app/views/admin/products/edit.html.erb
+++ b/app/views/admin/products/edit.html.erb
@@ -1,2 +1,35 @@
-<h1>Admin::Products#edit</h1>
-<p>Find me in app/views/admin/products/edit.html.erb</p>
+<h1>商品情報編集ページ</h1>
+
+    <%= form_for(@product, url: admin_product_path(@product.id), method: :patch) do |f| %>
+
+
+    <h4>商品名</h4>
+    <%= f.text_field :product_name %>
+
+    <h4>商品画像</h4>
+    <%= f.attachment_field :image, placeholder: "プロフィール画像", class: "user-edit-form" %>
+
+    <h4>レーベルID</h4>
+    <%= f.text_field:label_id %>
+
+    <h4>ジャンルID</h4>
+    <%= f.text_field:genre_id %>
+
+    <h4>価格（税抜き）</h4>
+    <%= f.text_field :price %>
+
+    <h4>在庫数</h4>
+    <%= f.text_field :stock %>
+
+    <h4>ステータス（販売中/販売停止中）</h4>
+    <%= f.text_field :status %>
+
+    <h4>アーティストID</h4>
+    <%= f.text_field :artist_id %>
+
+
+    <%= f.submit '保存' %>
+
+<% end %>
+
+   
