--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -1,14 +1,29 @@
 <h1>管理者商品一覧</h1>
 
 
+<% @products.each do |product| %>
+	
+	<!-- 商品画像 -->
+	<%= link_to admin_product_path(product.id) do %>
+       <%= attachment_image_tag product, :image, :fill, 60, 60, format: 'jpeg' %> 
+    <% end %>
 
+	<!--  商品名 -->
+    <%= product.product_name %>
 
+    <!-- アーティスト名 -->
+    <%= product.artist_id %>
 
-
-
-<% if admin_signed_in? %>
- 	<p><%= @test %></p>
- 	<%= link_to "サインアップ", new_admin_session_path %>
- 	<%= link_to "ログイン", admin_session_path %>
- 	<%= link_to "ログアウト", destroy_admin_session_path, method: :delete %>
+    <!-- 価格 -->
+    <%= product.price %>
+    
+    <!-- ステータス -->
+    <%= product.status %>
+    
+  
 <% end %>
+
+
+<%= link_to "新規商品追加", new_admin_product_path %>
+
+
