--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,2 +1,6 @@
-<h1>Admin::Users#index</h1>
-<p>Find me in app/views/admin/users/index.html.erb</p>
+<h1>ユーザ一覧/管理者</h1>
+
+<%  @users.each do |user|%>
+   <%= link_to user.surname, admin_user_path(user.id) %>
+            
+<% end %>
