--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,3 +1,22 @@
-<div>
-	<h2>products</h2>
-</div>
+
+
+<%  @products.each do |product|%>
+
+   <%= link_to product_path(product.id) do %>
+       <%= attachment_image_tag product, :image, :fill, 60, 60, format: 'jpeg' %> 
+    <% end %>
+
+    <%= product.product_name %>
+
+    <!-- アーティスト名 -->
+    <%= product.artist_id %>
+
+    <!-- 価格 -->
+    <%= product.price %>
+    
+    <!-- ステータス -->
+    <%= product.status %>
+    
+
+
+<% end %>
