--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,9 +3,14 @@
 
 
 <div class="profile-container">
-    <h3 class="profile-name"><%= @user.surname %></h3>
+    <p><%= @user.surname%>さん</p>
+    <p><%= @user.email%></p>
+    <p><%= @user.zip_code%></p>
+    <p><%= @user.address%></p>
 
 	<% if @user.id == current_user.id %>
-        <p><%= link_to "プロフィール編集", edit_user_path(@user), class: "pull-right" %></p>
+        <p><%= link_to "プロフィール編集", edit_user_path(@user) %></p>
     <% end %>
 </div>
+
+<%= link_to "購入履歴一覧", "#" %>
