--- a/app/views/admin/products/new.html.erb
+++ b/app/views/admin/products/new.html.erb
@@ -27,6 +27,11 @@
     <h4>アーティストID</h4>
     <%= f.text_field :artist_id %>
 
+    <h4>ディスク名</h4>
+    <%= f.text_field :disc_name %>
+
+    <h4>ディスク内の曲名</h4>
+    <%= f.text_field :song_name %>
 
     <%= f.submit '保存' %>
 
