--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -2,7 +2,7 @@
 
 <%= form_for(@user) do |f| %>
 
-        <div class="form-group">
+    <div class="form-group">
 				<%= f.label :surname, '姓' %>
 				<%= f.text_field :surname %>
 		</div>
@@ -10,6 +10,16 @@
 		<div class="form-group">
 				<%= f.label :firstname, '名' %>
 				<%= f.text_field :firstname %>
+		</div>
+
+    <div class="form-group">
+				<%= f.label :kana_surname, 'カナ姓' %>
+				<%= f.text_field :kana_surname %>
+		</div>
+
+		<div class="form-group">
+				<%= f.label :kana_first_name, 'カナ名' %>
+				<%= f.text_field :kana_first_name %>
 		</div>
 
 		<div class="form-group">
