cartモデル作成

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -34,7 +34,8 @@
             <% end %>
         </p>
         <p>
-            <!--カートへ追加機能 -->
+            <!-- カートに追加ボタン-->
+            <!--ボタンを押すとcarts#add_itemへとPOSTアクションを飛ばし、購入数と商品IDを飛ばしたあと、carts#showへとリダイレクトするようにする。 -->
         </p>
     </div>
 </div>
