--- a/app/views/admin/products/new.html.erb
+++ b/app/views/admin/products/new.html.erb
@@ -10,10 +10,10 @@
     <%= f.attachment_field :image, placeholder: "プロフィール画像", class: "user-edit-form" %>
 
     <h4>レーベルID</h4>
-    <%= f.text_field :label_name %>
+    <%= f.text_field :label_id %>
 
     <h4>ジャンルID</h4>
-    <%= f.text_field :genre_name %>
+    <%= f.text_field :genre_id %>
 
     <h4>価格（税抜き）</h4>
     <%= f.text_field :price %>
@@ -25,13 +25,20 @@
     <%= f.text_field :status %>
 
     <h4>アーティストID</h4>
-    <%= f.text_field :artist_name %>
+    <%= f.text_field :artist_id %>
 
-    <h4>ディスク名</h4>
-    <%= f.text_field :disc_name %>
+    <!-- gem: cocoon -->
+    <div id="dicsc">
+        <%= f.fields_for :discs do |disc| %>
+            <% render "disc_fields", f: disc %>
+        <% end %>
+        <div class="links">
+            <%= link_to_add_association "add disc", f, :discs %>
+        </div>
+    </div>
 
     <h4>ディスク内の曲名</h4>
-    <%= f.text_field :song_name %>
+
 
     <%= f.submit '保存' %>
 
