--- a/app/views/admin/products/new.html.erb
+++ b/app/views/admin/products/new.html.erb
@@ -10,10 +10,10 @@
     <%= f.attachment_field :image, placeholder: "プロフィール画像", class: "user-edit-form" %>
 
     <h4>レーベルID</h4>
-    <%= f.text_field :label_id %>
+    <%= f.select :label_id, @labels.all.map{|o| [o.label_name, o.id]} %>
 
     <h4>ジャンルID</h4>
-    <%= f.text_field :genre_id %>
+    <%= f.select :genre_id, @genres.all.map{|o| [o.genre_name, o.id]} %>
 
     <h4>価格（税抜き）</h4>
     <%= f.text_field :price %>
@@ -22,10 +22,11 @@
     <%= f.text_field :stock %>
 
     <h4>ステータス（販売中/販売停止中）</h4>
-    <%= f.text_field :status %>
+    <label><%= f.radio_button :status , true %>販売中</label>
+    <label><%= f.radio_button :status , false %>販売停止中</label>
 
     <h4>アーティストID</h4>
-    <%= f.text_field :artist_id %>
+    <%= f.select :artist_id, @artists.all.map{|o| [o.artist_name, o.id]} %>
 
     <!-- gem: cocoon -->
     <div id="discs">
