--- a/app/views/admin/products/new.html.erb
+++ b/app/views/admin/products/new.html.erb
@@ -7,7 +7,7 @@
     <%= f.text_field :product_name %>
 
     <h4>商品画像</h4>
-    <%= f.attachment_field :image, placeholder: "プロフィール画像", class: "user-edit-form" %>
+    <%= f.attachment_field :image %>
 
     <h4>レーベルID</h4>
     <%= f.select :label_id, @labels.all.map{|o| [o.label_name, o.id]} %>
