--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -2,7 +2,7 @@
 
 
 <div class="profile-container">
-    <p><%= @user.surname%>さん</p>
+    <p><%= @user.surname%> <%= @user.firstname %>さん</p>
     <p><%= @user.email%></p>
     <p><%= @user.zip_code%></p>
     <p><%= @user.address%></p>
