--- a/app/views/purchases/index.html.erb
+++ b/app/views/purchases/index.html.erb
@@ -1,7 +1,1 @@
-<h1>Purchases#index</h1>
-<p>Find me in app/views/purchases/index.html.erb</p>
-
-<% if user_signed_in? %>
-	<p>now log in</p>
-	<%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
-<% end %>
+<h1>購入履歴一覧</h1>
