--- a/app/views/admin/products/new.html.erb
+++ b/app/views/admin/products/new.html.erb
@@ -1,3 +1,5 @@
+<%= render 'layouts/header2' %>
+
 <h1>新規商品登録</h1>
 <!-- form_for部分 -->
 <%= form_for(@product, url: admin_products_path, method: :post) do |f| %>
