--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,27 +1,53 @@
+<%= render 'layouts/header1' %>
 
+<% @products.each do |product| %>
 
-<%  @products.each do |product|%>
-
-  <!-- 商品画像 -->
-   <%= link_to product_path(product.id) do %>
-       <%= attachment_image_tag product, :image, :fill, 60, 60, format: 'jpeg' %>
-    <% end %>
-  <!-- 商品名 -->
-    <%= product.product_name %>
-
-    <!-- アーティスト名 -->
-    <%= product.artist_id %>
-
-    <!-- 価格 -->
-    <%= product.price %>
-
-    <!-- ステータス -->
-    <%= product.status %>
-
+    <table style="border: 2px black solid;">
+        <tbody>
+            <tr>
+                <td>
+                    <!-- 商品画像 -->
+                    <%= link_to product_path(product.id) do %>
+                        <%= attachment_image_tag product, :image, :fill, 60, 60, format: 'jpeg' %>
+                    <% end %>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <!--  商品名 -->
+                    <%= product.product_name %>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <!-- アーティスト名 -->
+                    <%= product.artist_id %>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <!-- 価格 -->
+                    <%= product.price %>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <!-- ステータス -->
+                    <%if product.status %>
+                        <h4>販売中</h4>
+                    <% else %>
+                        <h4>販売停止中</h4>
+                    <% end %>
+                </td>
+            </tr>
+        </tbody>
+    </table>
 <% end %>
+
+
+
 
     
 
 <%= link_to '商品詳細', product_path(@products) %>
-
 
