--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -1,4 +1,11 @@
 <%= render 'layouts/header1' %>
 
-<h1>Carts#index</h1>
-<p>Find me in app/views/carts/index.html.erb</p>
+<br>
+
+<% @cart_items.each do |item| %>
+	<span><%= item.product.product_name %>　</span>
+	<span><%= item.quantity %>個　</span>
+	<span>単価: <%= item.product.price %>円　</span>
+	<span>小計: <%= item.product.price.to_i * item.quantity %></span>
+	<br>
+<% end %>
