--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,5 +1,9 @@
 <%= render 'layouts/header1' %>
 
+<% if flash[:add_cart] %>
+    <h3><%= flash[:add_cart] %></h3>
+<% end %>
+
 <% @products.each do |product| %>
 
     <table style="border: 2px black solid;">
@@ -40,14 +44,15 @@
                     <% end %>
                 </td>
             </tr>
+            <tr>
+                <td>
+                    <%= link_to "カートへ追加", user_carts_path(current_user, product_id: product.id), method: :post %>
+                </td>
+            </tr>
         </tbody>
     </table>
 <% end %>
 
-
-
-
-    
 
 <%= link_to '商品詳細', product_path(@products) %>
 
