--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,5 +1,13 @@
 <%= render 'layouts/header1' %>
 
+<%= form_tag products_path, :method => 'get' do %> <%#products_pathはモデル名で読みかえること %>
+          <p>
+              <%= text_field_tag :search %>
+              <%= submit_tag "Search", :product_name => nil %>
+          </p>
+<% end %>
+
+
 <% if flash[:add_cart] %>
     <h3><%= flash[:add_cart] %></h3>
 <% end %>
