--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,15 @@
 // Place all the styles related to the users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.user-mypage-inner{
+	background-color: #80aba9;
+	width:364px;
+	height:364px;
+	float:left;
+	border: 1px solid #494a41;
+
+}
+
+.user-mypage-right{
+}
