--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -6,38 +6,43 @@
 <div class="shouArea clearfix">
     <div class="left cdImage">
         <!-- 商品画像 -->
-    <%= attachment_image_tag @products, :image, :fill, 60, 60, format: 'jpeg' %> 
+    <%= attachment_image_tag @product, :image, :fill, 60, 60, format: 'jpeg' %> 
     </div>
     <div class="right cdImage">
         <!-- 商品画像 -->
         <p class="productTitle">
-            <%= @products.product_name %>
+            <p>CD/アルバムタイトル</p>
+            <%= @product.product_name %>
         </p>
         <p class="productIntro">
-            <%= @products.artist.artist_name %>
+            <p>アーティスト名</p>
+            <%= @product.artist.artist_name %>
         </p>
         <p class="productIntro">
-            <%= @products.genre.genre_name %>
+            <p>ジャンル名</p>
+            <%= @product.genre.genre_name %>
         </p>
         <p class="productIntro">
-            <%= @products.label.label_name %>
+            <p>レーベル名</p>
+            <%= @product.label.label_name %>
         </p>
         <p class="productPrice">
-            <%= @products.price %>
+            ¥<%= @product.price %>
         </p>
         <p>
-            <%= form_for(@cart.quantity) do |f| %>
-            <%= f.select :quantity, [1,2,3,4,5,6,7,8,9,10] %>
+            <%= form_tag(current_user, url: user_carts_path(user_id: current_user.id), method: :post) do |f| %>
+
+            <%= select_tag(:quantity, options_for_select(@stock_array)) %>個
+            <%= submit_tag "カートに追加" %>
             <% end %>
         </p>
         <p>
-            <% if @products.stock.count == 0 %>
+            <% if @product.stock == 0 %>
             <p>売り切れ</p>
             <% end %>
         </p>
         <p>
-            <!-- カートに追加ボタン-->
-            <!--ボタンを押すとcarts#add_itemへとPOSTアクションを飛ばし、購入数と商品IDを飛ばしたあと、carts#showへとリダイレクトするようにする。 -->
+            
         </p>
     </div>
 </div>
@@ -47,9 +52,9 @@
 <table>
     <tbody>
         <tr>
-            <td><% @products.disc.each do |disc| %></td>
+            <td><% @product.discs.each do |disc| %></td>
             <td><%= disc.disc_name %></td>
-            <td><% @products.disc.song.each do |song| %></td>
+            <td><% @product.discs.song.each do |song| %></td>
             <td><%= song.song_name %></td>
         <% end %>
         <% end %>
