--- a/app/views/layouts/_header1.html.erb
+++ b/app/views/layouts/_header1.html.erb
@@ -9,9 +9,25 @@
                         <li class="nav-item"><%= link_to 'マイページ　', user_path(current_user.id) %></li>
                         <li class="nav-item"><%= link_to 'カート　', user_carts_path(current_user) %></li>
                         <li class="nav-item"><%= link_to "ユーザログアウト　", destroy_user_session_path, method: :delete%></li>
+                        <li>
+                            <%= search_form_for q do |f| %>
+                              <%= f.search_field :product_name_cont %>
+ 
+                              <%= f.submit %>
+                            <% end %>
+                        </li>
                   <% else %>
+                        
                         <li class="nav-item"><%= link_to 'ユーザサインアップ　', new_user_registration_path %></li>
                         <li class="nav-item"><%= link_to 'ユーザログイン　', new_user_session_path %></li>
+                        <li>
+                            <%= search_form_for q do |f| %>
+                              <%= f.search_field :product_name_cont %>
+ 
+                              <%= f.submit %>
+                            <% end %>
+                        </li>
+
                   <% end %>
               </ul>
           </div>
