--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,4 +1,4 @@
-<%= render 'layouts/header1' %>
+<%= render 'layouts/header1',q: @q %>
 
 <h1>商品詳細ページ</h1>
 
@@ -49,15 +49,7 @@
 
 
 
-<table>
-    <tbody>
-        <tr>
-            <td><% @product.discs.each do |disc| %></td>
-            <td><%= disc.disc_name %></td>
-            <td><% @product.discs.song.each do |song| %></td>
-            <td><%= song.song_name %></td>
-        <% end %>
-        <% end %>
-    </tr>
-</tbody>
-</table>
+
+
+
+
