--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -30,7 +30,7 @@
             ¥<%= @product.price %>
         </p>
         <p>
-            <%= form_tag(current_user, url: user_create_cart_path(user_id: current_user.id), method: :post) do |f| %>
+            <%= form_tag(current_user, url: user_carts_path(user_id: current_user.id), method: :post) do |f| %>
 
             <%= select_tag(:quantity, options_for_select(@stock_array)) %>個
             <%= submit_tag "カートに追加" %>
