--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -10,4 +10,4 @@
 	<br>
 <% end %>
 
-<%= link_to "決済画面へ(now: 購入確定処理のリンク)", user_purchases_path, method: :post %>
+<%= link_to "決済画面へ(now: 購入確定処理のリンク)", user_cart_path() %>
