--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,4 +1,4 @@
-<%= render 'layouts/header1' %>
+<%= render 'layouts/header1',q: @q %>
 
 <%= form_tag products_path, :method => 'get' do %> <%#products_pathはモデル名で読みかえること %>
           <p>
