--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -47,11 +47,17 @@
                     <% end %>
                 </td>
             </tr>
+            <tr>
+                <td>
+                    <%= link_to '商品詳細', product_path(products) %>
+
+                    
+                </td>
+            </tr>
         </tbody>
     </table>
 <% end %>
 
 
-<%= link_to '商品詳細', product_path(@products) %>
 
 
