非ログイン時の商品詳細画面表示(カートへ追加を隠す)

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -49,9 +49,7 @@
             </tr>
             <tr>
                 <td>
-                    <%= link_to '商品詳細', product_path(products) %>
-
-                    
+                    <%= link_to '商品詳細', product_path(product) %>
                 </td>
             </tr>
         </tbody>
